SideBarNavigato: fix sidebar z-index valuer

--- a/src/SideBarNavigator/SideBar/SideBar.module.css
+++ b/src/SideBarNavigator/SideBar/SideBar.module.css
@@ -75,7 +75,6 @@
         position:absolute;
         left:0;
         top:0;
-        z-index:10;
-        background-color:red;
+        z-index:5;
     }
 }
