--- a/src/SideBarNavigator/SideBarNavigator.module.css
+++ b/src/SideBarNavigator/SideBarNavigator.module.css
@@ -12,4 +12,5 @@
     position:relative;
     flex:1;
     height:100%;
+    z-index:0;
 }
